crates/chimera-cli/tests/snapshots/output_snapshot__json_envelope_basic_numbers.snap
---
source: crates/chimera-cli/tests/output_snapshot.rs
assertion_line: 32
expression: render(&data)
---
{
  "status": "ok",
  "data": [
    42,
    3600,
    7
  ]
}
