crates/chimera-cli/tests/snapshots/output_snapshot__json_envelope_basic_string.snap
---
source: crates/chimera-cli/tests/output_snapshot.rs
assertion_line: 25
expression: render(&data)
---
{
  "status": "ok",
  "data": "hello world"
}
