crates/chimera-cli/tests/snapshots/output_snapshot__json_envelope_empty_edges-2.snap
---
source: crates/chimera-cli/tests/output_snapshot.rs
assertion_line: 53
expression: render(&empty_map)
---
{
  "status": "ok",
  "data": {}
}
