crates/chimera-cli/tests/snapshots/output_snapshot__json_envelope_empty_edges-3.snap
---
source: crates/chimera-cli/tests/output_snapshot.rs
assertion_line: 55
expression: render(&empty_str)
---
{
  "status": "ok",
  "data": ""
}
