crates/chimera-cli/tests/snapshots/output_snapshot__json_envelope_empty_edges.snap
---
source: crates/chimera-cli/tests/output_snapshot.rs
assertion_line: 51
expression: render(&empty_vec)
---
{
  "status": "ok",
  "data": []
}
