crates/chimera-cli/tests/snapshots/output_snapshot__json_error_envelope_shape.snap
---
source: crates/chimera-cli/tests/output_snapshot.rs
assertion_line: 83
expression: json
---
{
  "status": "error",
  "error": {
    "kind": "ConfigError",
    "message": "配置文件缺失"
  },
  "exit_code": 3
}
